fix: scrollbar gutter stable

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -12,6 +12,7 @@
 @layer components {
     .scrollbar {
         overflow-x: auto;
+        scrollbar-gutter: stable;
     }
 
     .scrollbar::-webkit-scrollbar {
